--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -68,6 +68,22 @@
       display: block;
       width: 80%;
     }
+    .notification {
+      margin: 0.5em 0;
+      padding: 1em;
+    }
+    .notification-success {
+      background: #e1ffb1;
+      color: #255d00;
+      border: 1px solid #8bc34a;
+      border-radius: 3px;
+    }
+    .notification-error {
+      background: #ffa4a2;
+      color: #8e0000;
+      border: 1px solid #f44336;
+      border-radius: 3px;
+    }
   </style>
   <body>
     <header th:fragment="top">
