--- a/src/main/resources/templates/signin_form.html
+++ b/src/main/resources/templates/signin_form.html
@@ -16,7 +16,7 @@
 
       <h2>Sign in to your account</h2>
 
-      <form method="post" action="/login" enctype="application/x-www-form-urlencoded">
+      <form method="post" action="/customers/authenticate" enctype="application/x-www-form-urlencoded">
 
         <fieldset>
           <label for="identifier">Identifier</label>
